# inquira-ai

./: .gitmodules  README.md  next.config.ts  package-lock.json  pyproject.toml  requirements.txt  setup_remotes.ps1  setup_remotes.sh
src/backend/: .env.example  .gitignore  README.md  pyproject.toml  run_e2e_benchmark.py
src/backend/app/: main.py
src/backend/app/auth/: __init__.py  dependencies.py  email_otp_service.py  oauth_service.py  router.py  schemas.py
src/backend/app/benchmarking/: __init__.py  metrics.py  schemas.py
src/backend/app/core/: config.py  container.py  dependencies.py  responses.py
src/backend/app/core/dtos/: __init__.py  author.py
src/backend/app/db/: database.py
src/backend/app/domain/authors/: __init__.py  (+5 more)
src/backend/app/extensions/: citation_extractor.py  middleware.py
src/backend/app/llm/: __init__.py  base_client.py  ollama_client.py  openai_client.py  services.py
src/backend/app/models/: __init__.py  authors.py  bookmarks.py  citations.py  conferences.py  conversations.py  message_contexts.py  messages.py  papers.py  preprocessing_state.py  refresh_tokens.py  user_settings.py  users.py
src/backend/app/modules/: __init__.py  crawler.py
src/backend/app/processor/: paper_processor.py  preprocessing_repository.py  preprocessing_service.py  preprocessing_single_phase.py  schemas.py
src/backend/app/rag_pipeline/: __init__.py  agent_pipeline.py  analyze_data.py  config.py  data_collector.py  database_pipeline.py  hybrid_pipeline.py  pipeline.py  schemas.py  scoped_pipeline.py
src/backend/app/retriever/: mappers.py  result_logger.py  router.py
src/backend/app/search/: filter_options.py  filters.py
src/backend/app/user_settings/: repository.py  router.py  service.py
src/backend/app/utils/: normalize_string.py  transformers.py
src/backend/app/validation/: __init__.py  schemas.py
src/backend/app/workers/: enrichment_worker.py  task_queue.py
src/backend/data/: CORE.csv
src/backend/data/litqa/: exception.json
src/backend/rag_eval/: export_answer_validations.py  ir_benchmark.py  pyproject.toml
src/backend/scripts/: import_sjr_data.py  preprocess_litqa_dois.py
(+648 files in other folders)
