[project]
name = "inquira-backend"
version = "1.0.0"
description = "A backend service for AI research agent."
readme = "README.md"
authors = [
    { name = "Duc", email = "duc@exmaple.com" }
]
requires-python = ">=3.9"
dependencies = [
"fastapi[standard]>=0.95.0",
    "pydantic_settings>=2.0.0",

    "sqlalchemy>=2.0.0",
    "asyncpg>=0.25.0",
    "redis>=5.0.0",
    "pgvector>=0.2.0",

    "requests>=2.32.5,<3.0.0",
    "beautifulsoup4>=4.11.0",

    "numpy>=1.26.4,<2.0.0",
    "torch>=2.2.0,<3.0.0",
    "sentence-transformers>=2.6.0,<3.0.0",

    "tiktoken>=0.8.0,<0.9.0",
    "openai>=2.26.0,<3.0.0",
    "litellm>=1.80.0,<2.0.0",

    "langgraph>=0.2.40",

    "playwright>=1.53.0",
    "docling>=0.2.0",

    "alembic>=1.8.0",
    "python-multipart>=0.0.5",

    "python-jose[cryptography]>=3.3.0",
    "rich>=13.0.0",
    "colorama>=0.4.4",
]



[project.scripts]
run = "app.main:start"

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"